# CppSonic2

./: .gitattributes  CppSonic2.sln  README.md
CppSonic2/: CMakeLists.txt  CppSonic2.aps  CppSonic2.vcxproj  CppSonic2.vcxproj.filters  build_web.bat  resource.h
CppSonic2/fonts/: consolas.fnt  consolas_bold.fnt  cp437.fnt  fnt_hud.fnt  fnt_titlecard.fnt  ms_gothic.fnt  ms_mincho.fnt
CppSonic2/levels/: .gitignore
CppSonic2/music/: source.txt
CppSonic2/shaders/: palette.frag  palette.vert  sine.frag  sine.vert
CppSonic2/sounds/: source.txt
CppSonic2/src/: assets.cpp  assets.h  batch_renderer.cpp  batch_renderer.h  bunnymark.cpp  bunnymark.h  common.cpp  common.h  config.h  console.cpp  console.h  count_lines.bat  count_lines_exclude.txt  editor.cpp  editor.h  editor_old.cpp  editor_old.h  font.cpp  font.h  game.cpp  game.h  imgui_default_config_old.h  imgui_glue.cpp  imgui_glue.h  input.cpp  input.h  input_bindings.cpp  input_bindings.h  main.cpp  main_menu.cpp  package.cpp  package.h  particle_system.cpp  particle_system.h  platform.h  platform_windows.cpp  program.cpp  program.h  renderer.cpp  renderer.h  (+16 more)
CppSonic2/src/imgui/: imconfig.h  imgui_draw.cpp  imgui_single_file.cpp
CppSonic2/src/nfd/: nfd_common.c  nfd_common.cpp  nfd_win.cpp  nfd_zenity.cpp
CppSonic2/textures/: TODO.txt  bg_EE.ase  source.txt
CppSonic2/tiled/: EEZ.tsx  EEZ_Act1.tmx  Objects.tsx
CppSonic2/tiled/extensions/: SonicVHS.js
android-project/: .gitignore  README.md
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/jni/src/: CMakeLists.txt
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/res/values/: strings.xml
